# advent-of-code-2025

./: aoc2025.cabal
app/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Main.hs
